--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "theme-toggle-button",
   "private": true,
   "author": "Shubham Parihar <shubhamparihar391@gmail.com>",
+  "description": "An implementation of a theme toggle button using React, Vite, and TailwindCSS",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -20,5 +21,6 @@
     "tailwindcss": "^3.0.8",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
-  }
+  },
+  "license": "MIT"
 }
